2005-04-22 13:49  chris

	* lib/CAM/PDF/: Content.pm, Decrypt.pm, GS.pm, GS/NoText.pm,
	  Renderer/Dump.pm, Renderer/Images.pm, Renderer/Text.pm: Fix more
	  license blocks

2005-04-22 13:44  chris

	* Build.PL, LICENSE, MANIFEST, README, index.html, lib/CAM/PDF.pm,
	  scripts/rewritepdf.pl: v0.99 Relicense

2005-03-31 22:00  chris

	* scripts/asciify: Debug shell script

2004-12-08 12:39  chris

	* lib/CAM/PDF/GS/NoText.pm: Add handy nodeType function

2004-12-08 12:39  chris

	* lib/CAM/PDF.pm: Bugfix: read error on fontmetrics Width array
	  (bounds error)

2004-12-06 13:29  chris

	* lib/CAM/PDF.pm: debugging

2004-12-02 17:03  chris

	* lib/CAM/PDF.pm, scripts/listfonts.pl: bugfixes and additions

2004-12-01 12:28  chris

	* MANIFEST: Add missing MANIFEST entries

2004-11-30 16:41  chris

	* lib/CAM/: PDF.pm, PDF/GS.pm, PDF/GS/NoText.pm:
	  v0.98 addFont now checks that the font does not exist before
	  adding Added better position support to GS Added support for
	  color devices in GS

2004-11-29 14:44  chris

	* lib/CAM/PDF.pm, scripts/appendpdf.pl: Bugfix for prepend code

2004-11-29 14:31  chris

	* scripts/appendpdf.pl: Add prepend option

2004-11-21 11:49  chris

	* lib/CAM/PDF/GS/NoText.pm: runtime load of Data::Dumper

2004-11-09 21:40  chris

	* lib/CAM/PDF/Content.pm, lib/CAM/PDF/GS.pm, scripts/getpdftext.pl:
	  v0.97 Tree validation fixes

2004-11-09 21:39  chris

	* lib/CAM/: PDF.pm, PDF/GS.pm: v0.97 Pass textwidth into the
	  renderText() function

2004-07-01 17:29  chris

	* lib/CAM/: PDF.pm, PDF/Content.pm: Fix a bug in the page
	  validation: string vs. hexstring

2004-06-17 17:34  chris

	* lib/CAM/: PDF.pm, PDF/GS.pm, PDF/GS/NoText.pm: v0.95 New methods:
	  addFont, wrapString Debugged: graphic state computation Cleaned
	  up some documentation

2004-05-13 01:48  chris

	* lib/CAM/PDF.pm, scripts/deillustrate.pl, scripts/pdfinfo.pl:
	  v0.94

	  New methods:	 getFontNames	getFonts   getFontByBaseName
	  deEmbedFontByBaseName   deEmbedFontObj
