@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">CAM-PDF</p>
 
-<p class="subtitle">Last update: <a href="perl/CAM-PDF-0.99-docs">v0.99</a>, 2005-04-22</p>
+<p class="subtitle">Last update: <a href="perl/CAM-PDF-1.00-docs">v1.00</a>, 2005-09-19</p>
 
 
 
@@ -106,6 +106,22 @@ functionality at http://www.clotho.com/pdfdemo/
       <tr>
         <td valign="top"><a href="#perl">Perl</a></td>
         <td valign="top">
+          <a href="perl/CAM-PDF-1.00.tgz">CAM-PDF-1.00.tgz</a>
+          (<a href="perl/CAM-PDF-1.00.tgz.md5">MD5</a>)
+          <br>
+          <a href="perl/CAM-PDF-1.00.zip">CAM-PDF-1.00.zip</a>
+          (<a href="perl/CAM-PDF-1.00.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="perl/CAM-PDF-1.00-docs">CAM-PDF-1.00-docs</a>
+          
+        </td>
+        <td valign="top">Mon Sep 19 09:23:06 2005</td>
+      </tr>
+    
+      <tr>
+        <td valign="top"><a href="#perl">Perl</a></td>
+        <td valign="top">
           <a href="perl/CAM-PDF-0.99.tgz">CAM-PDF-0.99.tgz</a>
           (<a href="perl/CAM-PDF-0.99.tgz.md5">MD5</a>)
           <br>
@@ -116,7 +132,7 @@ functionality at http://www.clotho.com/pdfdemo/
             <a href="perl/CAM-PDF-0.99-docs">CAM-PDF-0.99-docs</a>
           
         </td>
-        <td valign="top">Fri Apr 22 13:45:24 2005</td>
+        <td valign="top">Mon Jun  6 10:11:11 2005</td>
       </tr>
     
       <tr>
